# mReleaser

./: .env  .envrc  .gitignore  Makefile  README.md  action.yml  setup.cfg
.github/workflows/: main.yaml
src/mreleaser/: __init__.py
tests/: Brewfile
tests/bats.bash/: bats::envrc.bats
tests/helpers/: helper.bash
tests/mreleaser/: test_cli.py
tests/version/: version.bats
