[metadata]
name = mreleaser

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
    build
    semver
package_dir =
    =src
packages = find:
python_requires = >=3.10
scripts =
    bin/*

[options.data_files]
bin =
    src/bin/*
etc =
    etc/*

[options.entry_points]
console_scripts =
    jetbrains = pyrc.jetbrains:app
    watchme = watch.cli:app

[options.extras_require]
test =
    pytest

[options.packages.find]
where = src
