[metadata]
name = mreleaser

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
    build
    semver
    typer[all]
    wheel
package_dir =
    =src
packages = find:
python_requires = >=3.10
scripts =
    bin/*

[options.entry_points]
console_scripts =
    mreleaser = mreleaser:app

[options.extras_require]
test =
    pytest

[options.packages.find]
where = src
